complete_container_left footer

--- a/index.html
+++ b/index.html
@@ -260,15 +260,15 @@
             <div class="container_left flex">
 
                 <div id="voice">
-                    <i class="fas fa-th fa-3x"></i>
+                    <i class="fas fa-th fa-2x"></i>
                     <div>Mute</div>
                 </div>
                 <div class="up">
                     <i class="fas fa-chevron-up"></i>
                 </div>
                 <div id="video">
-                    <i class="fas fa-th fa-3x"></i>
-                    <div>Mute</div>
+                    <i class="fas fa-video fa-2x"></i>
+                    <div>StopVideo</div>
                 </div>
                 <div class="up">
                     <i class="fas fa-chevron-up"></i>
