--- a/index.html
+++ b/index.html
@@ -280,39 +280,39 @@
             <div class="container_main flex">
 
                 <div id="voice">
-                    <i class="fas fa-th fa-3x"></i>
-                    <div>Mute</div>
+                    <i class="fas fa-user-plus fa-2x"></i>
+                    <div>Invite</div>
                 </div>
                 <div id="voice">
-                    <i class="fas fa-th fa-3x"></i>
-                    <div>Mute</div>
+                    <i class="fas fa-user-friends fa-2x"></i>
+                    <div>ManageParticipants</div>
                 </div>
                 <div id="voice">
-                    <i class="fas fa-th fa-3x"></i>
-                    <div>Mute</div>
+                    <i class="fas fa-chart-bar fa-2x"></i>
+                    <div>Poling</div>
                 </div>
-                <div id="voice">
-                    <i class="fas fa-th fa-3x"></i>
-                    <div>Mute</div>
+                <div id="ShareScreen">
+                    <i class="fas fa-share-square fa-2x txt_green"></i>
+                    <div>ShareScreen</div>
                 </div>
                 <div class="up">
                     <i class="fas fa-chevron-up"></i>
                 </div>
                 <div id="video">
-                    <i class="fas fa-th fa-3x"></i>
-                    <div>Mute</div>
+                    <i class="fas fa-comment fa-2x"></i>
+                    <div>Chat</div>
                 </div>
                 <div id="voice">
-                    <i class="fas fa-th fa-3x"></i>
-                    <div>Mute</div>
+                    <i class="fas fa-record-vinyl fa-2x"></i>
+                    <div>Record</div>
                 </div>
                 <div id="voice">
-                    <i class="fas fa-th fa-3x"></i>
-                    <div>Mute</div>
+                    <i class="fas fa-th-large fa-2x"></i>
+                    <div>BreackoutRoom</div>
                 </div>
                 <div id="voice">
-                    <i class="fas fa-th fa-3x"></i>
-                    <div>Mute</div>
+                    <i class="fas fa-ellipsis-h fa-2x"></i>
+                    <div>More</div>
                 </div>
 
             </div>
