--- a/index.html
+++ b/index.html
@@ -259,14 +259,14 @@
 
             <div class="container_left flex">
 
-                <div id="voice">
-                    <i class="fas fa-th fa-2x"></i>
+                <div>
+                    <i class="fas fa-microphone fa-2x"></i>
                     <div>Mute</div>
                 </div>
                 <div class="up">
                     <i class="fas fa-chevron-up"></i>
                 </div>
-                <div id="video">
+                <div>
                     <i class="fas fa-video fa-2x"></i>
                     <div>StopVideo</div>
                 </div>
@@ -279,38 +279,38 @@
 
             <div class="container_main flex">
 
-                <div id="voice">
+                <div>
                     <i class="fas fa-user-plus fa-2x"></i>
                     <div>Invite</div>
                 </div>
-                <div id="voice">
+                <div>
                     <i class="fas fa-user-friends fa-2x"></i>
                     <div>ManageParticipants</div>
                 </div>
-                <div id="voice">
+                <div>
                     <i class="fas fa-chart-bar fa-2x"></i>
                     <div>Poling</div>
                 </div>
-                <div id="ShareScreen">
+                <div>
                     <i class="fas fa-share-square fa-2x txt_green"></i>
                     <div>ShareScreen</div>
                 </div>
                 <div class="up">
                     <i class="fas fa-chevron-up"></i>
                 </div>
-                <div id="video">
+                <div>
                     <i class="fas fa-comment fa-2x"></i>
                     <div>Chat</div>
                 </div>
-                <div id="voice">
+                <div>
                     <i class="fas fa-record-vinyl fa-2x"></i>
                     <div>Record</div>
                 </div>
-                <div id="voice">
+                <div>
                     <i class="fas fa-th-large fa-2x"></i>
                     <div>BreackoutRoom</div>
                 </div>
-                <div id="voice">
+                <div>
                     <i class="fas fa-ellipsis-h fa-2x"></i>
                     <div>More</div>
                 </div>
