--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 
     <main id="window_main">
 
-        <div class="top_right_btn txt_white clearfix">
+        <div class="top_right_btn z_index txt_white clearfix">
             <div class="speaker bk_txt b_radius p_all f_l">
                 <i class="fas fa-th"></i>
                 <span>Speacker View</span>
